# EZLLM

./: .gitignore  CMakeLists.txt  extract.py
include/: Global.hpp  LayerBlock.hpp  LayerMemory.hpp  Model.hpp  ModelContext.hpp  PositionMemory.hpp  Tensor.hpp  TensorUtils.hpp  UTF8.hpp
include/Tensor4D/: MathOps.hpp  Shape.hpp  SlicedTensor4D.hpp  Tensor4D.hpp  Tensor4DUtils.hpp
include/Tokenizer/: GPT2Tokenizer.hpp  Tokenizer.hpp  json.hpp
src/: LayerBlock.cpp  Model.cpp  Tensor.cpp  TensorUtils.cpp  main.cpp
src/Tensor4D/: MathOps.cpp  SlicedTensor4D.cpp  Tensor4D.cpp  Tensor4DOps.cpp  Tensor4DUtils.cpp
src/Tokenizer/: Tokenizer.cpp
